<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TabHost
        android:id="@+id/tabHost"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <lovejazzie.clock.TimeView
                    android:id="@+id/tabTime"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvTime"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"/>
                </lovejazzie.clock.TimeView>

                <lovejazzie.clock.AlarmView
                    android:id="@+id/tabAlarm"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ListView
                        android:id="@+id/lvAlarmList"
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1">

                    </ListView>

                    <Button
                        android:id="@+id/btn_AddAlarm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/addAlarm"/>
                </lovejazzie.clock.AlarmView>

                <lovejazzie.clock.TimerView
                    android:id="@+id/tabTimer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/et_House"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:inputType="number"
                            android:singleLine="true"
                            android:textAppearance="?android:attr/textAppearanceLarge"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/分隔符"
                            android:textAppearance="?android:attr/textAppearanceLarge"/>

                        <EditText
                            android:id="@+id/et_Min"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:singleLine="true"
                            android:text="00"
                            android:textAppearance="?android:attr/textAppearanceLarge"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/分隔符"
                            android:textAppearance="?android:attr/textAppearanceLarge"/>

                        <EditText
                            android:id="@+id/et_Sec"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:inputType="number"
                            android:singleLine="true"
                            android:textAppearance="?android:attr/textAppearanceLarge"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/btnGroup"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="bottom"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btnStart"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center_horizontal"
                            android:text="@string/start"
                            />

                        <Button
                            android:id="@+id/btnPause"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/pause"
                            android:visibility="gone"
                            />

                        <Button
                            android:id="@+id/btnResume"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/resume"
                            android:visibility="gone"
                            />

                        <Button
                            android:id="@+id/btnReset"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/reset"
                            android:visibility="gone"
                            />

                    </LinearLayout>
                </lovejazzie.clock.TimerView>

                <lovejazzie.clock.StopWatchView
                    android:id="@+id/tabStopWatch"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        >

                        <TextView
                            android:id="@+id/timeHour"
                            android:layout_width="0dp"
                            android:gravity="center_horizontal"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/初始值"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/分隔符"/>

                        <TextView
                            android:id="@+id/timeMin"
                            android:gravity="center_horizontal"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/初始值"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/分隔符"/>

                        <TextView
                            android:id="@+id/timeSec"
                            android:gravity="center_horizontal"
                            android:layout_width="0dp"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/初始值"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/毫秒分割"/>

                        <TextView
                            android:id="@+id/MinSec"
                            android:layout_width="0dp"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:gravity="center_horizontal"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/初始值"/>
                    </LinearLayout>

                    <ListView
                        android:id="@+id/lvWatchTimeList"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1">

                    </ListView>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        >

                        <Button
                            android:id="@+id/btnSWStart"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/start"/>

                        <Button
                            android:id="@+id/btnSWPause"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/pause"/>

                        <Button
                            android:id="@+id/btnSWResume"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/resume"/>

                        <Button
                            android:id="@+id/btnSWLap"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/Lap"/>

                        <Button
                            android:id="@+id/btnSWReset"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/reset"/>
                    </LinearLayout>
                </lovejazzie.clock.StopWatchView>
            </FrameLayout>
        </LinearLayout>
    </TabHost>
</LinearLayout>